Inspeçao de DataFrames do Pandas

--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -2184,10 +2184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "099a5129-e339-4c62-8307-c051b04320ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Formato do DataFrame (.shape) ---\n",
+      "(6, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "# Mostra o número de linhas e colunas (formato)\n",
     "print(f\"\\n--- Formato do DataFrame (.shape) ---\\n{df_dsa.shape}\")"
@@ -2195,10 +2205,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "cd249d51-4a43-4afe-9ba6-9883693af065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- As 3 primeiras linhas (.head(3)) ---\n",
+      "\n",
+      "      Nome  Idade     Cidade  Salário\n",
+      "0      Ana   28.0   Blumenau      NaN\n",
+      "1    Bruno   34.0  São Paulo   7500.0\n",
+      "2  Fabiana   29.0   Blumenau   6200.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Mostra as 3 primeiras linhas do DataFrame\n",
     "print(\"\\n--- As 3 primeiras linhas (.head(3)) ---\\n\")\n",
@@ -2208,10 +2234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "de9ee1da-1de2-46fc-a32f-80714535f18b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- As 2 últimas linhas (.tail(2)) ---\n",
+      "\n",
+      "     Nome  Idade     Cidade  Salário\n",
+      "4  Eliana    NaN   Salvador   8100.0\n",
+      "5  Matias   78.0  São Paulo  15400.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Mostra as 2 últimas linhas do DataFrame\n",
     "print(\"\\n--- As 2 últimas linhas (.tail(2)) ---\\n\")\n",
@@ -2221,10 +2262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "a2ee3f26-e418-4272-9248-1e0f040b01f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Informações gerais (.info()) ---\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6 entries, 0 to 5\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   Nome     6 non-null      object \n",
+      " 1   Idade    5 non-null      float64\n",
+      " 2   Cidade   6 non-null      object \n",
+      " 3   Salário  5 non-null      float64\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 324.0+ bytes\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Fornece um resumo conciso do DataFrame (tipos de dados, valores não nulos, etc.)\n",
     "# Observe a contagem de valores\n",
@@ -2235,10 +2299,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "d10b6b3c-ab7a-4560-af86-9d6e7168d709",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Estatísticas descritivas (.describe()) ---\n",
+      "\n",
+      "           Idade       Salário\n",
+      "count   5.000000      5.000000\n",
+      "mean   37.200000   9300.000000\n",
+      "std    23.636836   3588.175024\n",
+      "min    17.000000   6200.000000\n",
+      "25%    28.000000   7500.000000\n",
+      "50%    29.000000   8100.000000\n",
+      "75%    34.000000   9300.000000\n",
+      "max    78.000000  15400.000000\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Gera estatísticas descritivas das colunas numéricas\n",
     "print(\"\\n--- Estatísticas descritivas (.describe()) ---\\n\")\n",
@@ -2248,10 +2333,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "652a89d4-053d-4c54-843c-23dafae0c48e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Estatísticas descritivas (numéricas e objetos) ---\n",
+      "\n",
+      "       Nome      Idade     Cidade       Salário\n",
+      "count     6   5.000000          6      5.000000\n",
+      "unique    6        NaN          3           NaN\n",
+      "top     Ana        NaN  São Paulo           NaN\n",
+      "freq      1        NaN          3           NaN\n",
+      "mean    NaN  37.200000        NaN   9300.000000\n",
+      "std     NaN  23.636836        NaN   3588.175024\n",
+      "min     NaN  17.000000        NaN   6200.000000\n",
+      "25%     NaN  28.000000        NaN   7500.000000\n",
+      "50%     NaN  29.000000        NaN   8100.000000\n",
+      "75%     NaN  34.000000        NaN   9300.000000\n",
+      "max     NaN  78.000000        NaN  15400.000000\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Estatísticas descritivas (numéricas e objetos) ---\\n\")\n",
     "print(df_dsa.describe(include = 'all'))  # inclui números, objetos e categorias"
@@ -2259,20 +2366,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "9b5ee1f6-f4bb-4a45-92f8-1a143cf2e2f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Cidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>São Paulo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Nome     Cidade\n",
+       "count     6          6\n",
+       "unique    6          3\n",
+       "top     Ana  São Paulo\n",
+       "freq      1          3"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dsa.describe(include = [object])   # só colunas do tipo object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "04247415-3f99-4cad-913d-ce848aae3b81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Salário</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>37.200000</td>\n",
+       "      <td>9300.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>23.636836</td>\n",
+       "      <td>3588.175024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>6200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>7500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>8100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>9300.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>15400.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Idade       Salário\n",
+       "count   5.000000      5.000000\n",
+       "mean   37.200000   9300.000000\n",
+       "std    23.636836   3588.175024\n",
+       "min    17.000000   6200.000000\n",
+       "25%    28.000000   7500.000000\n",
+       "50%    29.000000   8100.000000\n",
+       "75%    34.000000   9300.000000\n",
+       "max    78.000000  15400.000000"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dsa.describe(include = [np.number])  # só colunas numéricas (comportamento padrão)"
    ]
