Operações e Transformações de Dados com Pandas

--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -2546,20 +2546,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "3c6ff9da-568e-4a7c-ad66-51795be075ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nome  Idade     Cidade  Salário\n",
+       "0      Ana   28.0   Blumenau      NaN\n",
+       "1    Bruno   34.0  São Paulo   7500.0\n",
+       "2  Fabiana   29.0   Blumenau   6200.0\n",
+       "3  Ronaldo   17.0  São Paulo   9300.0\n",
+       "4   Eliana    NaN   Salvador   8100.0\n",
+       "5   Matias   78.0  São Paulo  15400.0"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dsa.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "ffe5e95c-7a68-4787-b000-06082304eec9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- DataFrame com a nova coluna 'Salário Anual' ---\n",
+      "\n",
+      "      Nome  Idade     Cidade  Salário  Salário Anual\n",
+      "0      Ana   28.0   Blumenau      NaN            NaN\n",
+      "1    Bruno   34.0  São Paulo   7500.0        90000.0\n",
+      "2  Fabiana   29.0   Blumenau   6200.0        74400.0\n",
+      "3  Ronaldo   17.0  São Paulo   9300.0       111600.0\n",
+      "4   Eliana    NaN   Salvador   8100.0        97200.0\n",
+      "5   Matias   78.0  São Paulo  15400.0       184800.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Criando uma nova coluna 'Salário Anual'\n",
     "df_dsa['Salário Anual'] = df_dsa['Salário'] * 12\n",
@@ -2570,10 +2678,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "eae3d619-9d9a-49ec-8dc8-2a3d9f73507e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- DataFrame com a nova coluna 'Bônus' ---\n",
+      "\n",
+      "      Nome  Idade     Cidade  Salário  Salário Anual   Bônus\n",
+      "0      Ana   28.0   Blumenau      NaN            NaN     NaN\n",
+      "1    Bruno   34.0  São Paulo   7500.0        90000.0   750.0\n",
+      "2  Fabiana   29.0   Blumenau   6200.0        74400.0   310.0\n",
+      "3  Ronaldo   17.0  São Paulo   9300.0       111600.0   930.0\n",
+      "4   Eliana    NaN   Salvador   8100.0        97200.0   810.0\n",
+      "5   Matias   78.0  São Paulo  15400.0       184800.0  1540.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Aplicando uma função para criar uma coluna de bônus\n",
     "# A função lambda aplica a operação para cada valor na coluna 'Salário'\n",
@@ -2592,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "5c1865f9-427a-4dc9-ad15-5b5f968c2cdd",
    "metadata": {},
    "outputs": [],
@@ -2608,17 +2733,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "711c1f8d-41e8-49bf-8ea3-dfa9a1392139",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3     True\n",
+      "4    False\n",
+      "5    False\n",
+      "Name: Idade, dtype: bool, 0     True\n",
+      "1    False\n",
+      "2     True\n",
+      "3    False\n",
+      "4    False\n",
+      "5    False\n",
+      "Name: Idade, dtype: bool, 0    False\n",
+      "1     True\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "5    False\n",
+      "Name: Idade, dtype: bool, 0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "4    False\n",
+      "5     True\n",
+      "Name: Idade, dtype: bool]\n"
+     ]
+    }
+   ],
    "source": [
     "print(condicoes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "bf832685-b30e-4bcd-9626-b65fdb44c0a2",
    "metadata": {},
    "outputs": [],
@@ -2629,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "f4a79b23-c327-4e8e-adb2-d5253a99736a",
    "metadata": {},
    "outputs": [],
@@ -2640,10 +2797,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "6ed85a1e-6c5b-4cb9-9b0d-9db2dd368164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Salário Anual</th>\n",
+       "      <th>Bônus</th>\n",
+       "      <th>Faixa Etária</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jovem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>Adulto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "      <td>74400.0</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>Jovem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "      <td>111600.0</td>\n",
+       "      <td>930.0</td>\n",
+       "      <td>Menor de idade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "      <td>97200.0</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>Idade não informada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "      <td>184800.0</td>\n",
+       "      <td>1540.0</td>\n",
+       "      <td>Idoso</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nome  Idade     Cidade  Salário  Salário Anual   Bônus  \\\n",
+       "0      Ana   28.0   Blumenau      NaN            NaN     NaN   \n",
+       "1    Bruno   34.0  São Paulo   7500.0        90000.0   750.0   \n",
+       "2  Fabiana   29.0   Blumenau   6200.0        74400.0   310.0   \n",
+       "3  Ronaldo   17.0  São Paulo   9300.0       111600.0   930.0   \n",
+       "4   Eliana    NaN   Salvador   8100.0        97200.0   810.0   \n",
+       "5   Matias   78.0  São Paulo  15400.0       184800.0  1540.0   \n",
+       "\n",
+       "          Faixa Etária  \n",
+       "0                Jovem  \n",
+       "1               Adulto  \n",
+       "2                Jovem  \n",
+       "3       Menor de idade  \n",
+       "4  Idade não informada  \n",
+       "5                Idoso  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dsa.head(6)"
    ]
