--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -2935,10 +2935,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "2c8eba77-0323-4155-be5f-e362aec48091",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cidade</th>\n",
+       "      <th>Salário</th>\n",
+       "      <th>Salário Anual</th>\n",
+       "      <th>Bônus</th>\n",
+       "      <th>Faixa Etária</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jovem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bruno</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>Adulto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fabiana</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Blumenau</td>\n",
+       "      <td>6200.0</td>\n",
+       "      <td>74400.0</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>Jovem</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ronaldo</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>9300.0</td>\n",
+       "      <td>111600.0</td>\n",
+       "      <td>930.0</td>\n",
+       "      <td>Menor de idade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eliana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Salvador</td>\n",
+       "      <td>8100.0</td>\n",
+       "      <td>97200.0</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>Idade não informada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Matias</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>São Paulo</td>\n",
+       "      <td>15400.0</td>\n",
+       "      <td>184800.0</td>\n",
+       "      <td>1540.0</td>\n",
+       "      <td>Idoso</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nome  Idade     Cidade  Salário  Salário Anual   Bônus  \\\n",
+       "0      Ana   28.0   Blumenau      NaN            NaN     NaN   \n",
+       "1    Bruno   34.0  São Paulo   7500.0        90000.0   750.0   \n",
+       "2  Fabiana   29.0   Blumenau   6200.0        74400.0   310.0   \n",
+       "3  Ronaldo   17.0  São Paulo   9300.0       111600.0   930.0   \n",
+       "4   Eliana    NaN   Salvador   8100.0        97200.0   810.0   \n",
+       "5   Matias   78.0  São Paulo  15400.0       184800.0  1540.0   \n",
+       "\n",
+       "          Faixa Etária  \n",
+       "0                Jovem  \n",
+       "1               Adulto  \n",
+       "2                Jovem  \n",
+       "3       Menor de idade  \n",
+       "4  Idade não informada  \n",
+       "5                Idoso  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dsa.head(6)"
    ]
