Manipulação de Tipos de Dados com Pandas

--- a/Cap09/DSA-Python-Cap09.ipynb
+++ b/Cap09/DSA-Python-Cap09.ipynb
@@ -3063,10 +3063,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "4f6888f6-1fd2-49c8-8216-39701decf5eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Média de Salário por Cidade ---\n",
+      "\n",
+      "Cidade\n",
+      "Blumenau      6200.00\n",
+      "Salvador      8100.00\n",
+      "São Paulo    10733.33\n",
+      "Name: Salário, dtype: float64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Agrupando os dados por 'Cidade' e calculando a média de 'Salário' para cada cidade\n",
     "media_salario_cidade = df_dsa.groupby('Cidade')['Salário'].mean()\n",
@@ -3077,7 +3094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "c8a377f4-3ee7-4e09-9b32-dbc8000b6f9e",
    "metadata": {},
    "outputs": [],
@@ -3090,10 +3107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "08d2561a-46c5-443c-8ab8-9f2233d6d670",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Agregação múltipla por Cidade ---\n",
+      "\n",
+      "           Media_Salarial  Idade_Maxima  Contagem\n",
+      "Cidade                                           \n",
+      "Blumenau      6200.000000          29.0         2\n",
+      "Salvador      8100.000000           NaN         1\n",
+      "São Paulo    10733.333333          78.0         3\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Agregação múltipla por Cidade ---\\n\")\n",
     "print(agregacao_cidade)"
@@ -3111,10 +3143,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "e416c3ec-f4e2-4087-a9c8-0e3279db8e2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Tipos de dados antes da conversão ---\n",
+      "\n",
+      "Nome              object\n",
+      "Idade            float64\n",
+      "Cidade            object\n",
+      "Salário          float64\n",
+      "Salário Anual    float64\n",
+      "Bônus            float64\n",
+      "Faixa Etária      object\n",
+      "dtype: object\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Verificando os tipos de dados atuais\n",
     "print(\"\\n--- Tipos de dados antes da conversão ---\\n\")\n",
@@ -3135,10 +3187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "a09e820f-9e22-4e0f-a07f-d8213c8cb080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\felip\\AppData\\Local\\Temp\\ipykernel_4452\\3442599421.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_dsa['Idade'] = df_dsa['Idade'].astype(int)\n"
+     ]
+    }
+   ],
    "source": [
     "# Primeiro removemos a linha com valor ausente\n",
     "df_dsa = df_dsa.dropna(subset = ['Idade'])\n",
@@ -3149,10 +3214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "5b951524-d058-45e4-894c-186d2b166bb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Tipos de dados após a conversão ---\n",
+      "\n",
+      "Nome              object\n",
+      "Idade              int64\n",
+      "Cidade            object\n",
+      "Salário          float64\n",
+      "Salário Anual    float64\n",
+      "Bônus            float64\n",
+      "Faixa Etária      object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Tipos de dados após a conversão ---\\n\")\n",
     "print(df_dsa.dtypes)"
@@ -3160,10 +3243,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "f94b3db6-ab7d-421f-87d6-b7df3aec3217",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\felip\\AppData\\Local\\Temp\\ipykernel_4452\\1349426023.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_dsa['Nome'] = df_dsa['Nome'].astype('string')\n",
+      "C:\\Users\\felip\\AppData\\Local\\Temp\\ipykernel_4452\\1349426023.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_dsa['Cidade'] = df_dsa['Cidade'].astype('string')\n",
+      "C:\\Users\\felip\\AppData\\Local\\Temp\\ipykernel_4452\\1349426023.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_dsa['Faixa Etária'] = df_dsa['Faixa Etária'].astype('string')\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertendo do tipo object para o tipo string\n",
     "df_dsa['Nome'] = df_dsa['Nome'].astype('string')\n",
@@ -3173,10 +3281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "27188f9e-8047-4340-8e0f-284681fdb43b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Tipos de dados após a conversão ---\n",
+      "\n",
+      "Nome             string[python]\n",
+      "Idade                     int64\n",
+      "Cidade           string[python]\n",
+      "Salário                 float64\n",
+      "Salário Anual           float64\n",
+      "Bônus                   float64\n",
+      "Faixa Etária     string[python]\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Tipos de dados após a conversão ---\\n\")\n",
     "print(df_dsa.dtypes)"
@@ -3184,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "115df26b-ba7f-49d8-a74e-646edab428bf",
    "metadata": {},
    "outputs": [],
@@ -3195,10 +3321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "25c9c6c5-f1e3-4d4f-8677-c1ed37166a6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Tipos de dados após a conversão ---\n",
+      "\n",
+      "Nome             string[python]\n",
+      "Idade                     int64\n",
+      "Cidade           string[python]\n",
+      "Salário                 float64\n",
+      "Salário Anual           float64\n",
+      "Bônus                   float64\n",
+      "Faixa Etária     string[python]\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Tipos de dados após a conversão ---\\n\")\n",
     "print(df_dsa.dtypes)"
