--- a/Cap09/DSA-Python-Lista3-Exercicios-Solucao.ipynb
+++ b/Cap09/DSA-Python-Lista3-Exercicios-Solucao.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8341d2d2-0282-4977-bdf7-9ec419466e79",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8cecadc0-c625-443d-ac88-2e03784dd911",
    "metadata": {},
    "outputs": [],
@@ -71,20 +71,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "309f99de-9b12-4c40-ace1-d493175f901c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3d133f46-c9d2-4059-b9aa-da86488da38d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Terceira coluna da matriz:\n",
+      "\n",
+      "[ 3  7 11 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -101,10 +123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "42f17a18-2a5c-4a7e-9845-f901bb25fbcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2],\n",
+       "       [ 6],\n",
+       "       [10],\n",
+       "       [14]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CUIDADO.... ISSO AQUI GERA RESULTADO COMPLETAMENTE DIFERENTE:\n",
     "matriz[:, 1:2]"
@@ -112,10 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "49f2f10d-97f3-4461-ac01-1aaa49f4968f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(4, 0), dtype=int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CUIDADO.... ISSO AQUI GERA RESULTADO COMPLETAMENTE DIFERENTE:\n",
     "matriz[:, 2:2]"
@@ -139,10 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "53206e03-a386-4257-b12c-54910459cc37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3],\n",
+       "       [ 7],\n",
+       "       [11],\n",
+       "       [15]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Já isso aqui gera o resultado esperado!\n",
     "matriz[:, 2:3]"
@@ -160,20 +221,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a558125b-bc88-4dd8-bacb-b706e76d2765",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d9f8cb5b-202f-4f48-b819-0a1493d12c45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bloco central 2x2:\n",
+      "\n",
+      "[[ 6  7]\n",
+      " [10 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -200,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b2016785-33e9-4fc7-8760-62a827fe50f1",
    "metadata": {},
    "outputs": [],
@@ -212,10 +296,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c54c1074-56b8-4fce-9098-03783b14b803",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz A (2x3):\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "\n",
+      "Matriz B (3x2):\n",
+      "[[ 7  8]\n",
+      " [ 9 10]\n",
+      " [11 12]]\n",
+      "\n",
+      "Produto Matricial C (2x2):\n",
+      "[[ 58  64]\n",
+      " [139 154]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -256,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "056ca49e-3cd2-40b8-a68b-b31cf8ee3a96",
    "metadata": {},
    "outputs": [],
@@ -267,20 +370,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e862475d-84cc-4872-afc6-e39ff8846ff9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7  8]\n",
+      " [ 9 10 11 12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23 24 25 26]\n",
+      " [27 28 29 30 31 32 33 34 35]\n",
+      " [36 37 38 39 40 41 42 43 44]\n",
+      " [45 46 47 48 49 50 51 52 53]\n",
+      " [54 55 56 57 58 59 60 61 62]\n",
+      " [63 64 65 66 67 68 69 70 71]\n",
+      " [72 73 74 75 76 77 78 79 80]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ffabc808-267f-4cc8-99c5-0900b85042f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Original:\n",
+      "[[ 0  1  2  3  4  5  6  7  8]\n",
+      " [ 9 10 11 12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23 24 25 26]\n",
+      " [27 28 29 30 31 32 33 34 35]\n",
+      " [36 37 38 39 40 41 42 43 44]\n",
+      " [45 46 47 48 49 50 51 52 53]\n",
+      " [54 55 56 57 58 59 60 61 62]\n",
+      " [63 64 65 66 67 68 69 70 71]\n",
+      " [72 73 74 75 76 77 78 79 80]]\n",
+      "\n",
+      "Linhas Pares e Colunas Ímpares:\n",
+      "[[ 1  3  5  7]\n",
+      " [19 21 23 25]\n",
+      " [37 39 41 43]\n",
+      " [55 57 59 61]\n",
+      " [73 75 77 79]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -314,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0958aefb-9df8-49ac-9f4f-603c1a7e72dd",
    "metadata": {},
    "outputs": [],
@@ -325,20 +468,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6f2b18bc-a3ef-48ce-98f3-2c766bde70cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "85c55211-b149-4973-9db8-738c692031c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz com o centro modificado:\n",
+      "[[0 0 0 0]\n",
+      " [0 5 5 0]\n",
+      " [0 5 5 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -372,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4ad45955-b0e1-43e9-bec3-ef2481906d0d",
    "metadata": {},
    "outputs": [],
@@ -383,20 +549,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "13e4470d-c764-4b76-aae6-7d23414b812b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20 30]\n",
+      " [40 50 60]\n",
+      " [70 80 90]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8a7529f2-98b7-465f-8e1c-b890bdc96be0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média: 50.0\n",
+      "Desvio Padrão: 25.82\n",
+      "\n",
+      "Matriz Normalizada:\n",
+      "[[-1.55 -1.16 -0.77]\n",
+      " [-0.39  0.    0.39]\n",
+      " [ 0.77  1.16  1.55]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -445,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "eacc6dda-fd85-4a78-8b85-00bfb1a43ea9",
    "metadata": {},
    "outputs": [],
@@ -456,20 +646,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "80d80024-600b-48ff-a3ce-a47de3d9215e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(dados)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "232ca993-1489-4672-9ee7-af32d782e533",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Original:\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "\n",
+      "Matriz Modificada:\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8 -1 -1 -1]\n",
+      " [-1 -1 -1 -1]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -522,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c2e59fcd-f418-430b-9298-0a8bd7ec9e7c",
    "metadata": {},
    "outputs": [],
@@ -533,20 +752,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "42ed093a-be4e-4e61-83ad-56949b944ca7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 7]\n",
+      " [2 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "da69715c-eaee-4f58-947f-1a86bcde93c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Original A:\n",
+      "[[4 7]\n",
+      " [2 6]]\n",
+      "\n",
+      "Matriz Inversa de A:\n",
+      "[[ 0.6 -0.7]\n",
+      " [-0.2  0.4]]\n",
+      "\n",
+      "Produto A * A_inversa (deve ser a Matriz Identidade):\n",
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -599,10 +845,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "69ce8080-9d78-40e9-be3b-d6ed21c44c40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de Coeficientes A:\n",
+      "[[2 1]\n",
+      " [1 3]]\n",
+      "\n",
+      "Vetor de Constantes b:\n",
+      "[8 7]\n",
+      "\n",
+      "Solução (x, y): [3.4 1.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -650,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b184a3ef-ddcd-400c-91e8-5456569dd72b",
    "metadata": {},
    "outputs": [],
@@ -661,20 +922,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "14934ef7-bac1-46ec-b9e9-72024dcbae21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "684b4f01-3036-4acf-9e20-b67822107120",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Original:\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n",
+      "\n",
+      "Borda da Matriz:\n",
+      "[ 0  1  2  3  4  9 14 19 24 23 22 21 20 15 10  5]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solução\n",
     "\n",
@@ -730,7 +1019,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -744,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
